update task week 6

--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/About.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/About.xaml
@@ -1,13 +1,115 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TaskWeek6.Views.About"
-             Title="about">
+             xmlns:view="clr-namespace:TaskWeek6.ViewModels"
+             x:Class="TaskWeek6.Views.About">
+    <ContentPage.BindingContext>
+         <view:User/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to about Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="30"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="120"/>
+                    <RowDefinition Height="40"/>
+                </Grid.RowDefinitions>
+            
+            
+            <Frame  Grid.Column="1"
+                    Grid.Row="1"
+                    BorderColor="Black"
+                    CornerRadius="80"
+                    WidthRequest="160"
+                    HeightRequest="160"
+                    BackgroundColor="Transparent"
+                    OutlineColor = "Blue"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Start"
+                    Margin="0"
+                    Padding="0">
+                <Image Source="UserICON.png"
+                        WidthRequest="145"
+                        Aspect="Fill"/>
+            </Frame>
+            
+
+                <Grid Grid.Column="1" Grid.Row="2" HorizontalOptions="Center">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="95"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="20"/>
+                        <RowDefinition Height="17"/>
+                        <RowDefinition Height="17"/>
+                        <RowDefinition Height="17"/>
+                    </Grid.RowDefinitions>
+
+                    <!--==============-->
+                    <Label Grid.Column="0"
+                        Grid.Row="1"
+                        Text="Name:"
+                        HorizontalOptions="Start"/>
+                    <Label Grid.Column="1"
+                        Grid.Row="1"
+                        Text="Jonh Doe"
+                        HorizontalOptions="Start"/>
+
+                    <!--==============-->
+                    <Label Grid.Column="0"
+                        Grid.Row="2"
+                        Text="User Name:"
+                        HorizontalOptions="Start"/>
+                    <Label Grid.Column="1"
+                            Grid.Row="2"
+                            x:Name="lblUserName"
+                            HorizontalOptions="Start"/>
+
+                    <!--==============-->
+                    <Label Grid.Column="0"
+                        Grid.Row="3"
+                        Text="Password:"
+                        HorizontalOptions="Start"/>
+                    <Label Grid.Column="1"
+                        Grid.Row="3"
+                        x:Name="lblPass"
+                        HorizontalOptions="Start"/>
+                    
+                    <!--==============-->
+                    <!--==============-->
+                </Grid>
+
+               
+             <!--
+            <Frame Grid.Column="0" Grid.Row="0" BackgroundColor="Accent"/>
+            <Frame Grid.Column="0" Grid.Row="1" BackgroundColor="AliceBlue"/>
+            <Frame Grid.Column="0" Grid.Row="2" BackgroundColor="AntiqueWhite"/>
+            <Frame Grid.Column="0" Grid.Row="3" BackgroundColor="Aqua"/>
+            
+            <Frame Grid.Column="1" Grid.Row="0" BackgroundColor="Aquamarine"/>
+            <Frame Grid.Column="1" Grid.Row="1" BackgroundColor="Transparent"/>
+            <Frame Grid.Column="1" Grid.Row="2" BackgroundColor="Transparent"/>
+            <Frame Grid.Column="1" Grid.Row="3" BackgroundColor="Black"/>
+            
+            <Frame Grid.Column="2" Grid.Row="0" BackgroundColor="Blue"/>
+            <Frame Grid.Column="2" Grid.Row="1" BackgroundColor="BlanchedAlmond"/>
+            <Frame Grid.Column="2" Grid.Row="2" BackgroundColor="BlueViolet"/>
+            <Frame Grid.Column="2" Grid.Row="3" BackgroundColor="Chocolate"/>
+                -->  
+            </Grid>
+            
         </StackLayout>
+
+
+
+
     </ContentPage.Content>
 </ContentPage>
