--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePage.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePage.xaml
@@ -9,7 +9,7 @@
   <MasterDetailPage.Detail>
     <NavigationPage>
       <x:Arguments>
-        <pages:HomePageDetail />
+        <pages:About />
       </x:Arguments>
     </NavigationPage>
   </MasterDetailPage.Detail>
