--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageDetail.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageDetail.xaml
@@ -3,16 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TaskWeek6.Views.HomePageDetail"
              Title="Detail">
+    <!--
   <StackLayout Padding="10">
     <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
-        <Frame  
-                            BorderColor="Black"
-                            CornerRadius="80"
-                            BackgroundColor="Transparent"
-                            HeightRequest="130"
-                            WidthRequest="130">
-            
+        <Frame HeightRequest="100" WidthRequest="100" CornerRadius="50" HorizontalOptions="Start" VerticalOptions="Start" Margin="0" Padding="0" BackgroundColor="Maroon">
+            <Label Text="7" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
         </Frame>
+                 
+    </StackLayout>  -->
 
-    </StackLayout>
+    <RelativeLayout BackgroundColor="#007aff" IsClippedToBounds="false">
+        <StackLayout  Orientation="Vertical" x:Name="SplashLayout" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"
+    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=1}"
+    RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=1}"
+    >
+            <Image Source="maleIcon.png" HeightRequest="143" HorizontalOptions="Center"/>
+            <Label Text="Fundraising" FontSize="Large" TextColor="White" HorizontalOptions="Center" />
+            <Label Text="American Cancer Society" FontSize="Medium" TextColor="White" HorizontalOptions="Center" />
+        </StackLayout>
+
+    </RelativeLayout>
 </ContentPage>
