--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageMaster.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageMaster.xaml
@@ -12,33 +12,51 @@
                 
           <Grid BackgroundColor="#03A9F4">
               <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="20"/>
               </Grid.ColumnDefinitions>
               <Grid.RowDefinitions>
                         <RowDefinition Height="5"/>
                         <RowDefinition Height="5"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="50"/>
               </Grid.RowDefinitions>
 
                     <Frame  Grid.Column="1"
                             Grid.Row="2"
                             BorderColor="Black"
-                            CornerRadius="75"
-                            BackgroundColor="Transparent">
+                            CornerRadius="60"
+                            WidthRequest="120"
+                            HeightRequest="120"
+                            BackgroundColor="Transparent"
+                            OutlineColor = "Blue"
+                            HorizontalOptions="Start"
+                            VerticalOptions="Start"
+                            Margin="0"
+                            Padding="0">
                         <Image Source="UserICON.png"
-                               WidthRequest="75"
-                               HeightRequest="65"
+                               WidthRequest="110"
                                Aspect="Fill"/>
                     </Frame>
-                    
-                    <Label
-                        Grid.Column="1"
-                        Grid.Row="3"
-                  Text="AppName"
-                  Style="{DynamicResource SubtitleStyle}"/>
+
+                    <Grid Grid.Column="1" Grid.Row="3">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="70"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="15"/>
+                            <RowDefinition Height="15"/>
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Column="0" Grid.Row="0" Text="UserName:"/>
+                        <Label Grid.Column="0" Grid.Row="1" Text="Name:"/>
+
+                        <Label Grid.Column="1" Grid.Row="0" Text="abc123"/>
+                        <Label Grid.Column="1" Grid.Row="1" Text="Jonh Doe"/>
+                    </Grid>
+                        
         </Grid>
       </ListView.Header>
       <ListView.ItemTemplate>
