--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/LoginPageView.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/LoginPageView.xaml
@@ -4,22 +4,68 @@
              x:Class="TaskWeek6.Views.LoginPageView"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="Center">
+        <RelativeLayout BackgroundColor="#007aff" IsClippedToBounds="false">
+            <StackLayout  Orientation="Vertical" x:Name="SplashLayout" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"
+                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=1}"
+                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=1}">
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="15"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="15"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                        <!--
+                        <Frame Grid.Column="1" Grid.Row="0" WidthRequest="200" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" CornerRadius="20" Padding="0" >
+                            <Label Text="Login Form" FontAttributes="Bold" FontSize="Large"/>
+                        </Frame>
+                            -->
+                    <Frame BackgroundColor="#013082" Grid.Column="1" Grid.Row="1">
+                        
+                        <Grid Padding="0" Margin="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="45"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45" />
+                                
+                            </Grid.RowDefinitions>
+
+                            <!--====================-->
+
+                            <Frame Grid.Column="0" Grid.Row="0" Padding="0" BackgroundColor="#66CCCC" Opacity="0.9">
+                                <Image Source="maleIcon.png" WidthRequest="45"/>
+                            </Frame>
+                            <Frame Grid.Column="0" Grid.Row="1" Padding="2" BackgroundColor="#66CCCC" Opacity="0.9">
+                                <Image Source="securityIcon.png" WidthRequest="45"/>
+                            </Frame>
+
+                            <Frame Grid.Column="1" Grid.Row="0" Padding="0">
+                                <Entry x:Name="etrUserName" Text="{Binding UserName}" Placeholder="User Name" />
+                            </Frame>
+                            <Frame Grid.Column="1" Grid.Row="1" Padding="0">
+                                <Entry x:Name="etrPass" Text="{Binding PassWord}" Placeholder="Password" IsPassword="True"/>
+                            </Frame>
+                            
+                            <Frame Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" HorizontalOptions="CenterAndExpand" Padding="0">
+                                <Button HeightRequest="45" WidthRequest="550" Text="Login" Command="{Binding NavigateCommand}" BackgroundColor="#19B8CD"/>
+                            </Frame>
+                            <!--========================-->
+                        </Grid>
+
+                    </Frame>
+                </Grid>
+                
             
-            <StackLayout Orientation="Horizontal" VerticalOptions="Center">
-                <Label Text="User Name:" WidthRequest="100"/>
-                <Entry x:Name="etrUserName" Text="{Binding UserName}" Placeholder="User Name" />
+                
             </StackLayout>
-            <StackLayout Orientation="Horizontal" VerticalOptions="Center">
-                <Label Text="Password:" WidthRequest="100"/>
-                <Entry x:Name="etrPass" Text="{Binding PassWord}" Placeholder="Password" IsPassword="True"/>
-            </StackLayout>
-            
-            
-            <StackLayout HorizontalOptions="Center">
-                <Button Text="Login" Command="{Binding NavigateCommand}"/>
-            </StackLayout>
-            
-        </StackLayout>
+        </RelativeLayout>
     </ContentPage.Content>
 </ContentPage>
