update task week 6

--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/PostPage.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/PostPage.xaml
@@ -1,11 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
+             prism:ViewModelLocator.AutowireViewModel="True"
+             xmlns:behaviors="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
              x:Class="TaskWeek6.Views.PostPage"
              Title="Posts Page">
     <ContentPage.Content>
         <StackLayout>
-            <ListView x:Name="lvwPost">
+            <ListView ItemsSource="{Binding Posts}" >
+                <ListView.Behaviors>
+                    <!--EventArgsParameterPath="Item" mean: ItemTappedEventArgs.Item-->
+                    <behaviors:EventToCommandBehavior
+                    EventName="ItemTapped"
+                    Command="{Binding SelectCommand}"
+                    EventArgsParameterPath="Item" />
+                </ListView.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -20,3 +30,4 @@
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
+
