--- a/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageMaster.xaml
+++ b/TaskWeek6/TaskWeek6/TaskWeek6/Views/HomePageMaster.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TaskWeek6.Views.HomePageMaster"
              Title="Master">
-    <StackLayout BackgroundColor="LightGray">
+    <StackLayout BackgroundColor="#2E2E2E">
         <ListView x:Name="MenuItemsListView"
               SeparatorVisibility="None"
               HasUnevenRows="true"
               ItemsSource="{Binding MenuItems}">
             <ListView.Header>
 
-                <Grid BackgroundColor="Gray">
+                <Grid BackgroundColor="#222222">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
                         <ColumnDefinition Width="*"/>
